<resources>
    <string name="app_name">Kotlin IIM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="checkbox_validTOU">Valid Terms of use</string>
    <string name="btn_login">Login</string>
    <string name="hello">Hello %s</string>
    <string name="emailNotValid">Not valid email format</string>
    <string name="enter_a_name_of_a_city">Enter a name of a city</string>
    <string name="valid">Valid</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>